--- a/sass/style.scss
+++ b/sass/style.scss
@@ -13,5 +13,10 @@ main {
     right: 0;
     bottom: 0;
     left: 0;
+
+    // hides all choruses but first one
+    .no-duplicated-choruses .Chorus ~ .Chorus {
+        display: none;
+    }
 }
 
