Added ui to toggle show/hide chords

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -18,5 +18,10 @@ main {
     .no-duplicated-choruses .Chorus ~ .Chorus {
         display: none;
     }
+
+}
+
+.no-chords {
+    display: none;
 }
 
