fixed google font not loaded over https

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,4 +1,4 @@
-@import url(http://fonts.googleapis.com/css?family=Source+Serif+Pro);
+@import url(https://fonts.googleapis.com/css?family=Source+Serif+Pro);
 $font-family-base: 'Source Serif Pro', sans-serif;
 // Import bootstrap and fontawesome
 @import "bootstrap";
