--- a/sass/style.scss
+++ b/sass/style.scss
@@ -83,11 +83,14 @@ main {
         @include column-width(400px);
         @include column-count(3);
         @include column-gap(50px);
-        /*position: fixed;*/
         top: $header-height + $title-heigth;
         right: 0;
         bottom: 0;
         left: 0;
+
+        section {
+            @include break-inside(avoid);
+        }
 
         background: $bgcolor;
         ul {
@@ -99,6 +102,7 @@ main {
         section {
 
             h2 {
+                break-before: column;
                 text-transform: uppercase;
                 font-size: 1.5rem;
                 margin-top: 0;
