--- a/sass/style.scss
+++ b/sass/style.scss
@@ -52,29 +52,31 @@ main {
     aside ~ header {
         margin: $margins $margins 0 $margins;
         padding-bottom: $margins;
-        display: inline-flex;
+        text-align: center;
+
         h1 {
             font-size: 3rem;
             text-transform: uppercase;
             margin: 0;
-            margin-right: $margins;
         }
 
-        border-bottom: solid black 1px;
-
-        div {
-        }
 
         h2 {
             color: gray;
             font-size: 1.5rem;
             margin: 0;
+            display: inline;
+        }
+
+        h2:after {
+            content: ' - ';
         }
 
         h3 {
             color: gray;
             font-size: 1.5rem;
             margin: 0;
+            display: inline;
         }
     }
 
@@ -82,7 +84,7 @@ main {
         margin: $margins;
         @include column-width(400px);
         @include column-count(3);
-        @include column-gap(50px);
+        @include column-gap(60px);
         top: $header-height + $title-heigth;
         right: 0;
         bottom: 0;
