--- a/sass/style.scss
+++ b/sass/style.scss
@@ -40,6 +40,12 @@ main {
             height: $header-height;
             width: $header-height;
         }
+
+        button {
+            background: none;
+            color: white;
+            border: none;
+        }
     }
 
 
@@ -51,8 +57,8 @@ main {
 
     aside ~ header {
         margin: $margins $margins 0 $margins;
-        padding-bottom: $margins;
         text-align: center;
+
 
         h1 {
             font-size: 3rem;
