rough sass refactor and improved react components semantic

--- a/sass/pages/_song.scss
+++ b/sass/pages/_song.scss
@@ -1,77 +1,29 @@
-@import url(https://fonts.googleapis.com/css?family=Source+Serif+Pro);
-$font-family-base: 'Source Serif Pro', sans-serif;
-// Import bootstrap and fontawesome
-@import "bootstrap";
-@import "font-awesome";
-
-@import "compass/css3";
-
-$primary-color: #6A92FF;
-$secondary-color: #76B223;
-$tertiary-color: #CC5D42;
-
-$header-height: 50px;
-$title-heigth: 60px;
 $margins: 50px;
-
-html {
-    box-sizing: border-box;
-}
-
 main {
+
+    //hides chords display
+    .no-chords {
+        display: none;
+    }
+
     display: flex;
     flex-direction: column;
 
-    aside {
-        height: $header-height;
-        background-color: black;
-
-        ul {
-            padding: 0;
-            list-style: none;
-        }
-        
-        li {
-            display: inline;
-        }
-
-        .fa {
-            height: 40px;
-            width: 40px;
-        }
-
-        button {
-            background: $primary-color;
-            margin: 5px 0 5px 5px;
-            color: white;
-            border-radius: 5px;
-            border: none;
-        }
-    }
-
-
-    aside header {
-        margin: 0;
-        border-bottom: none;
-        display: inline-flex;
-    }
-
-    aside ~ header {
+    header {
+        background: none;
         margin: $margins $margins 0 $margins;
         text-align: center;
 
 
         h1 {
-            font-size: 3rem;
+            font-size: $header-font-size;
             text-transform: uppercase;
-            margin: 0;
         }
 
 
         h2 {
-            color: gray;
+            color: $light-font-color;
             font-size: 1.5rem;
-            margin: 0;
             display: inline;
         }
 
@@ -82,7 +34,6 @@ main {
         h3 {
             color: gray;
             font-size: 1.5rem;
-            margin: 0;
             display: inline;
         }
     }
@@ -92,18 +43,9 @@ main {
         @include column-width(400px);
         @include column-count(3);
         @include column-gap(60px);
-        top: $header-height + $title-heigth;
-        right: 0;
-        bottom: 0;
-        left: 0;
 
         section {
             @include break-inside(avoid);
-        }
-
-        ul {
-            margin: 0;
-            padding: 0;
         }
 
         section {
@@ -120,28 +62,24 @@ main {
                 position: relative;
             }
 
+            // chorus "tooltip"
             &.Chorus h2:before {
                 content: '\25b6';
-                color: $tertiary-color;
+                color: $accent-color3;
                 position: absolute;
                 top: 0;
                 left: -15px;
             }
 
 
+            // allows for line breaks
             p {
                 white-space: pre-line;
             }
 
-            span {
-                position:relative;
-            }
-
             b {
-                padding: 2px;
-                margin: 2px;
-                border-radius: 2px;
-                color: $primary-color;
+                margin: 0 4px;
+                color: $accent-color;
             }
 
             // add space after regular lines
@@ -161,7 +99,6 @@ main {
             }
 
             padding: 20px;
-            margin: 0;
             line-height: 2;
         }
     }
@@ -173,13 +110,3 @@ main {
     }
 
 }
-
-main > ul {
-    display: none;
-}
-
-//hides chords display
-.no-chords {
-    display: none;
-}
-
