--- a/style.css
+++ b/style.css
@@ -4,55 +4,41 @@
     box-sizing: border-box;
 }
 
-main {
-    display: flex;
-    flex-direction: column;
-}
-
 main header {
-    background: none;
-    margin: 50px 50px 0 50px;
     text-align: center;
 }
 
 main article {
-    margin: 50px;
-    column-width: 400px;
-    -moz-column-width: 400px;
+    margin: 1rem;
     column-count: 3;
     -moz-column-count: 3;
-    column-gap: 60px;
-    -moz-column-gap: 60px;
+    column-gap: 1rem;
+    -moz-column-gap: 5rem;
     line-height: 3;
 }
 
-main article section {
-    break-inside: avoid;
-}
-
-main article section h2 {
+main article section h4 {
     text-transform: uppercase;
     margin-top: 0;
-    margin-bottom: 10px;
+    margin-bottom: 1rem;
 }
 
 main article section p {
     white-space: pre-line;
-    margin-left: 15px;
-    margin-bottom: 15px;
+    margin-left: 1rem;
+    margin-bottom: 1rem;
     text-align: justify;
 }
 
 main article section b:after {
     content: attr(data-chord);
     position: absolute;
-    transform: translateY(-15px);
+    transform: translateY(-1.25rem);
 }
 
 main article section span[data-lyrics=""] b:after {
     position: relative;
-    transform: translateY(-15px);
-    top: -15px;
+    top: -1.25rem;
 }
 
 main article section span:after {
