--- a/style.css
+++ b/style.css
@@ -14,29 +14,27 @@ main article {
     -moz-column-count: 3;
     column-gap: 1rem;
     -moz-column-gap: 5rem;
-    line-height: 3;
+    line-height: 2.5;
 }
 
 main article section h4 {
     text-transform: uppercase;
-    margin-top: 0;
-    margin-bottom: 1rem;
 }
 
 main article section p {
     white-space: pre-line;
     margin-left: 1rem;
-    margin-bottom: 1rem;
     text-align: justify;
 }
 
-main article section b:after {
+main article section i:after {
     content: attr(data-chord);
+    font-size: 0.75rem;
     position: absolute;
-    transform: translateY(-1.25rem);
+    transform: translateY(-0.75rem);
 }
 
-main article section span[data-lyrics=""] b:after {
+main article section span[data-lyrics=""] i:after {
     position: relative;
     top: -1.25rem;
 }
