--- a/style.css
+++ b/style.css
@@ -15,6 +15,21 @@ nav ul {
     -moz-column-count: 4;
 }
 
+input[type="search"] {
+    border: none;
+    padding: 0.5rem;
+    padding-left: 2rem;
+    margin: 0.5rem;
+    width: 33vw;
+}
+
+form:before {
+    content: "\1F50D";
+    color: grey;
+    position: absolute;
+    padding: 1rem;
+}
+
 main header {
     text-align: center;
 }
