--- a/style.css
+++ b/style.css
@@ -4,15 +4,51 @@
     box-sizing: border-box;
 }
 
-nav {
-    background: black;
+body {
+    font-family: "Helvetica", "Arial", sans-serif;
+    line-height: 1.5;
+}
 
+h1, h2 {
+    color: black;
+}
+
+nav {
+    height: 3rem;
+    display: flex;
+    flex-flow: row wrap;
+    border-right: solid 0.25rem #222222;
+    border-left: solid 0.25rem #222222;
+    width: 100%;
+}
+
+nav form {
+    /*background: #222222;*/
+    padding-right: 1rem;
+}
+
+nav a, input[type=submit] {
+    background: none;
+    height: 2.5rem;
+    font-size: 1rem;
+    border: none;
+    vertical-align: middle;
+    text-decoration: none;
+    color: #1c5d99;
+    margin: 0.5rem 0.5rem;
+    text-align: center;
+    text-transform: uppercase;
+    box-shadow: 0 0.25em 0 #222222;
+    padding: 1rem;
+    padding-top: 0.5rem;
+}
+
+nav a:hover {
+    background: #1c5d99;
+    color: white;
 }
 
 ul {
-    background: white;
-    border-bottom: solid thick black;
-    border-left: solid thin black;
     column-count: 4;
     -moz-column-count: 4;
     -webkit-column-count: 4;
@@ -28,27 +64,24 @@ ul li a {
     display: inline-block;
     text-decoration: none;
     margin: 1rem;
-    opacity: 0.8;
-    color: black;
+    padding: 0.5rem;
+    color: #222;
 }
 
 ul li a:hover {
-    opacity: 1;
+    box-shadow: -0.25em -0.25em 0 #222222;
 }
 
 input[type="search"] {
     border: none;
+    border-radius: 1rem ;
     padding: 0.5rem;
-    padding-left: 2rem;
     margin: 0.5rem;
-    width: 33vw;
-}
-
-form:before {
-    content: "\1F50D";
-    color: grey;
-    position: absolute;
-    padding: 1rem;
+    margin-left: 1rem;
+    margin-right: 1rem;
+    padding-left: 1rem;
+    width: 100%;
+    border: solid 1px #222222;
 }
 
 main header {
@@ -85,7 +118,7 @@ main article section i:after {
     top: -1.25rem;
 }
 
-main article section span[data-lyrics=""] i:after {
+main article section span:not([data-lyrics]) i:after {
     display: inline;
 }
 
