--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ h1, h2 {
 }
 
 nav {
-    height: 3rem;
+    padding: 0 1rem;
     display: flex;
     flex-flow: row wrap;
     border-right: solid 0.25rem #222222;
@@ -49,11 +49,14 @@ nav a:hover {
 }
 
 ul {
-    column-count: 4;
-    -moz-column-count: 4;
-    -webkit-column-count: 4;
     list-style: none;
     padding: 1rem;
+    display: flex;
+    flex-wrap: wrap;
+}
+
+ul li {
+    width: 30rem;
 }
 
 ul li i {
@@ -73,11 +76,11 @@ ul li a:hover {
 }
 
 input[type="search"] {
+    font-size: 1rem;
     border: none;
     border-radius: 1rem ;
     padding: 0.5rem;
-    margin: 0.5rem;
-    margin-left: 1rem;
+    margin: 0.5rem 0;
     margin-right: 1rem;
     padding-left: 1rem;
     width: 100%;
