--- a/style.css
+++ b/style.css
@@ -42,6 +42,7 @@ nav a, input[type=submit] {
     padding: 1rem;
     padding-top: 0.5rem;
     outline: none;
+    cursor: pointer;
 }
 
 nav a:hover, input[type=submit]:hover, nav a:focus, input[type=submit]:focus {
@@ -52,6 +53,11 @@ nav a:hover, input[type=submit]:hover, nav a:focus, input[type=submit]:focus {
 nav a:active, input[type=submit]:active {
     background: #bbcde5;
     color: white;
+}
+
+input[type=submit] {
+    padding-top: 0;
+    padding-bottom: 0;
 }
 
 ul {
