--- a/style.css
+++ b/style.css
@@ -111,9 +111,9 @@ main header {
 main article {
     padding: 1rem;
     margin: 1rem;
-    column-count: 3;
-    -moz-column-count: 3;
-    -webkit-column-count: 3;
+    column-width: 30rem;
+    -moz-column-width: 30rem;
+    -webkit-column-width: 30rem;
     column-gap: 1rem;
     -moz-column-gap: 5rem;
     -webkit-column-gap: 5rem;
