--- a/style.css
+++ b/style.css
@@ -157,23 +157,33 @@ main article section span[data-lyrics$="."]:after {
     content: '\A';
 }
 
-main aside {
+.editor {
     display: flex;
-    height: 100vh;
-    width: 50vw;
+    flex-wrap: wrap;
 }
 
-main aside form {
+.editor main {
+    flex-grow: 2;
+}
+
+aside {
+    flex-grow: 1;
+    display: flex;
+    height: 100vh;
+}
+
+aside form {
+    flex-grow: 1;
     display: flex;
     flex-direction: column;
 }
 
-main aside textarea {
+aside textarea {
+    width: 100%;
     flex-grow: 1;
     padding: 1rem;
     font-size: 1rem;
     background: #222222;
     color: white;
     border: none;
-    width: 50vw;
 }
