--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ nav form {
     padding-right: 1rem;
 }
 
-nav a, input[type=submit], input[type=button] {
+nav a, input[type=submit], input[type=button], input[type=checkbox] + label {
     background: none;
     display: block;
     height: 2.5rem;
@@ -45,13 +45,21 @@ nav a, input[type=submit], input[type=button] {
     cursor: pointer;
 }
 
+input[type=checkbox]:checked + label {
+    box-shadow: 0 0.25em 0 #1c5d99;
+    color: black;
+}
+
+
 nav a:hover, input[type=submit]:hover, input[type=button]:hover,
-nav a:focus, input[type=submit]:focus, input[type=button]:focus {
+nav a:focus, input[type=submit]:focus, input[type=button]:focus,
+input[type=checkbox] + label:hover, input[type=checkbox] + label:focus {
     background: #1c5d99;
     color: white;
 }
 
-nav a:active, input[type=submit]:active, input[type=button]:active {
+nav a:active, input[type=submit]:active,
+input[type=button]:active, input[type=checkbox] + label:active {
     background: #bbcde5;
     color: white;
 }
@@ -65,6 +73,10 @@ input[type=submit]:disabled, input[type=button]:disabled {
     color: #222222;
     background: none;
     cursor: default;
+}
+
+input[type=checkbox] {
+    display: none;
 }
 
 ul {
