--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ h1, h2 {
 }
 
 nav {
-    padding: 0 1rem;
+    padding: 0.25rem;
     display: flex;
     flex-flow: row wrap;
     width: 100%;
@@ -43,20 +43,28 @@ nav a, input[type=submit], input[type=button], input[type=checkbox] + label {
     border: none;
     vertical-align: middle;
     text-decoration: none;
-    color: #1c5d99;
-    margin: 0.5rem 0.5rem;
+    color: white;
+    margin: 0 0.25rem;
     text-align: center;
     text-transform: uppercase;
-    box-shadow: 0 0.25em 0 #222222;
     padding: 1rem;
     padding-top: 0.5rem;
     outline: none;
     cursor: pointer;
 }
 
+input[type=submit] {
+    background: grey;
+}
+
+form[method=DELETE] input[type=submit] {
+    box-shadow: 0 0.25em 0 red;
+    background: none;
+}
+
 input[type=checkbox]:checked + label {
     box-shadow: 0 0.25em 0 #1c5d99;
-    color: black;
+    color: #1c5d99;
 }
 
 
@@ -70,6 +78,7 @@ input[type=checkbox] + label:hover, input[type=checkbox] + label:focus {
 nav a:active, input[type=submit]:active,
 input[type=button]:active, input[type=checkbox] + label:active {
     background: #bbcde5;
+    box-shadow: 0 0.25em 0 white;
     color: white;
 }
 
@@ -123,10 +132,7 @@ ul li a:active {
 input[type="search"] {
     font-size: 1rem;
     border: none;
-    border-radius: 1rem ;
-    padding: 0.5rem;
-    margin: 0.5rem 0;
-    margin-right: 1rem;
+    border-radius: 1.5rem ;
     padding-left: 1rem;
     width: 100%;
     border: solid 1px #222222;
