--- a/style.css
+++ b/style.css
@@ -5,85 +5,39 @@
 }
 
 body {
-    font-family: "Helvetica", "Arial", sans-serif;
-    line-height: 1.5;
     color: #222;
 }
 
 .site {
-    display: flex;
     min-height: 100vh;
-    flex-direction: column;
 }
 
 .site main, .site ul {
     flex: 1;
 }
 
-nav {
-    display: flex;
-    flex-flow: row wrap;
-    width: 100%;
-    background: #222;
-}
-
-ul h1, ul h2 {
-    background: #222;
+.white {
     color: white;
-    padding: 0.5rem;
 }
 
-ul h1 {
-    margin-bottom: 0.5rem;
+.bg-white {
+    background-color: white;
 }
 
-nav form {
-    display: flex;
+.bg-transparent {
+    background-color: transparent;
 }
 
-form[action="/search"] {
-    display: flex;
-    width: 100vw;
-    justify-content: center;
-}
-
-nav a[href="/"] {
-    background: white;
-    color: #222;
-}
-
-footer nav {
-    background: white;
-    border-top: solid 1px #222;
-}
-
-footer nav a {
-    color: #222;
-}
-
-nav a, input[type=submit], input[type=button], input[type=checkbox] + label {
-    background: none;
-    display: block;
-    font-size: 0.75rem;
-    border: none;
-    text-decoration: none;
-    color: white;
-    text-align: center;
-    text-transform: uppercase;
-    padding: 0.75rem;
-    outline: none;
+.cursor-pointer {
     cursor: pointer;
 }
 
-input[type=submit] {
-    border-left: solid 1px #1c5d99;
-    color: #1c5d99;
+.light-red {
+    color: #f93943;
 }
 
-form[method=DELETE] input[type=submit] {
-    color: #f93943;
-    background: none;
-    border: none;
+.light-blue {
+    color: #1c5d99;
 }
 
 input[type=checkbox]:checked + label {
@@ -104,52 +58,26 @@ input[type=button]:active, input[type=checkbox] + label:active {
     color: white;
 }
 
-input[type=submit], input[type=button] {
-    padding-top: 0;
-    padding-bottom: 0;
-}
-
 input[type=submit]:disabled, input[type=button]:disabled {
     color: #222222;
     background: none;
     cursor: default;
 }
 
-input[type=checkbox] {
-    display: none;
-}
-
-ul {
-    list-style: none;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-}
-
-main ul {
-}
-
-ul li {
-    float: left;
-    max-width: 25vw;
-}
-
-ul li i {
-    display: block;
-    padding: 1.5rem 0;
-}
-
-ul li i:after {
+.content-ellipsis-after:after {
     content: '...';
 }
 
-ul li a {
-    display: inline-block;
-    text-decoration: none;
-    margin: 1rem;
-    padding: 1.5rem;
+.dark-gray {
     color: #222;
-    outline: none;
+}
+
+.bg-dark-gray {
+    background-color: #222;
+}
+
+.border-dark-gray {
+    border-color: #222;
 }
 
 ul li a:hover, ul li a:focus {
@@ -161,49 +89,27 @@ ul li a:active {
     color: #1c5d99;
 }
 
+.rounded-2 {
+    border-radius: 1.5rem;
+}
+
 input[type="search"] {
-    display: block;
     width: 50vw;
-    font-size: 1rem;
-    border: none;
-    border-radius: 1.5rem ;
-    padding: 0.75rem;
-    border: solid 1px #222222;
-    margin: 2rem;
 }
 
 .js header nav input[type="submit"] {
     display: none;
 }
 
-header nav.minimal {
-    background: none;
-}
-
-main, ul {
-    padding: 1rem;
+.font-family-serifs {
     font-family: 'Georgia', serif;
 }
 
-main header {
-    line-height: 1.5;
-    text-align: right;
-    border-bottom: solid 1px #222;
-    padding-bottom: 0.75rem;
-    margin-bottom: 0.75rem;
+.font-family-sans-serifs {
+    font-family: "Helvetica", "Arial", sans-serif;
 }
 
-h1, h2, h3 {
-    font-size: 1.5rem;
-    font-weight: normal;
-}
-
-h2, h3 {
-    font-size: 1rem;
-    display: inline;
-}
-
-main h2::after {
+.content-dash-after:after {
     content: ' - ';
 }
 
@@ -213,32 +119,22 @@ main.hide-duplicated-chorus section[data-section=Chorus] ~ section[data-section=
 
 
 main {
-    padding: 1rem;
-    margin: 1rem;
     column-width: 30rem;
     -moz-column-width: 30rem;
     -webkit-column-width: 30rem;
     column-gap: 1rem;
     -moz-column-gap: 5rem;
     -webkit-column-gap: 5rem;
-    line-height: 2.5;
 }
 
-main article section {
+.column-break-inside-avoid {
     -webkit-column-break-inside: avoid;
     page-break-inside: avoid;
     break-inside: avoid;
 }
 
-
-main article section h4 {
-    text-transform: uppercase;
-}
-
-main article section p {
-    color: black;
-    margin-left: 1rem;
-    text-align: justify;
+.line-height-5 {
+    line-height: 2.5;
 }
 
 main article section i:after {
@@ -271,33 +167,20 @@ main article section span[data-lyrics$="."]:after {
     content: '\A';
 }
 
-.editor {
-    display: flex;
-    flex-wrap: wrap;
-}
-
 .editor main {
     flex-grow: 2;
 }
 
 aside {
     flex-grow: 1;
-    display: flex;
     height: 100vh;
 }
 
 aside form {
     flex-grow: 1;
-    display: flex;
-    flex-direction: column;
 }
 
 aside textarea {
     width: 100%;
     flex-grow: 1;
-    padding: 1rem;
-    font-size: 1rem;
-    background: #222222;
-    color: white;
-    border: none;
 }
