--- a/style.css
+++ b/style.css
@@ -1,11 +1,3 @@
-.site {
-    min-height: 100vh;
-}
-
-.site main, .site ul {
-    flex: 1;
-}
-
 [type=checkbox]:checked + label {
     color: #1c5d99;
 }
@@ -21,15 +13,6 @@ input[type=submit]:disabled, input[type=button]:disabled {
     content: '...';
 }
 
-ul li a:hover, ul li a:focus {
-    color: white;
-    background: #222;
-}
-
-ul li a:active {
-    color: #1c5d99;
-}
-
 .js header nav input[type="submit"] {
     display: none;
 }
@@ -38,16 +21,16 @@ ul li a:active {
     content: ' - ';
 }
 
-main.hide-duplicated-chorus section[data-section=Chorus] ~ section[data-section=Chorus] p {
+.hide-duplicated-chorus [data-section=Chorus] ~ [data-section=Chorus] p {
     display: none;
 }
 
 
-main {
+.column-container {
     column-width: 30rem;
     -moz-column-width: 30rem;
     -webkit-column-width: 30rem;
-    column-gap: 1rem;
+    column-gap: 5rem;
     -moz-column-gap: 5rem;
     -webkit-column-gap: 5rem;
 }
@@ -58,11 +41,11 @@ main {
     break-inside: avoid;
 }
 
-.line-height-5 {
+.song-content-line-height {
     line-height: 2.5;
 }
 
-main article section i:after {
+.chord-name:after {
     content: attr(data-chord);
     font-size: 0.75rem;
     position: relative;
@@ -72,23 +55,23 @@ main article section i:after {
     color: #1c5d99;
 }
 
-main article section span:not([data-lyrics]) i:after {
+.chord-and-lyrics:not([data-lyrics]) .chord-name:after {
     display: inline;
 }
 
-main article section span:before {
+.chord-and-lyrics:before {
     content: ' ';
 }
 
-main article section span[data-chord-placement=inside]:before {
+[data-chord-placement=inside]:before {
     content: '';
 }
 
-main article section span[data-chord-placement=inside] {
+[data-chord-placement=inside] {
     white-space: nowrap;
 }
 
-main article section span[data-lyrics$="."]:after {
+[data-lyrics$="."]:after {
     content: '\A';
 }
 
