make song more legible

--- a/style.css
+++ b/style.css
@@ -44,7 +44,7 @@
     display: inline-block;
     width: 0;
     top: -1.25rem;
-    color: #1c5d99;
+    font-family: serif;
 }
 
 .chord-and-lyrics:not([data-lyrics]) .chord-name:after {
